[package]
name = "ledger_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
csv = "1.1.6"
rust_decimal = "1.26.1"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[dev-dependencies]
anyhow = "1.0.62"
assert_cmd = "2.0.4"

[lib]
name = "ledger_rs"
path = "src/lib.rs"

[[bin]]
name = "csv_ledger"
path = "src/main.rs"
test = false
